fix title issue on mobile - closes #85

--- a/web/static/app/modules/_featured-podcast.sass
+++ b/web/static/app/modules/_featured-podcast.sass
@@ -99,11 +99,7 @@
                             display: inline-block
                             margin-left: 0.5rem
 
-        &_navigation
-            display: flex
-            align-items: center
-            justify-content: space-between
-            // position: relative
+        &_title
             // Make room (50px) for the arrows on mobile
             padding: 0 50px
 
